Fixed svg and sidebar spacing

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ li {
   letter-spacing: 2px;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2.5rem;
 }
 
 .sidebar li {
